--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@shopify/restyle": "^1.3.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-bootsplash": "^2.2.7",
