--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
-    "react-native-screens": "^2.12.0"
+    "react-native-screens": "^2.12.0",
+    "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -34,6 +35,7 @@
     "eslint": "^7.11.0",
     "jest": "^26.6.0",
     "metro-react-native-babel-preset": "^0.63.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.13.1",
     "typescript": "^4.0.3"
   },
