--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.12.0",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -30,6 +31,7 @@
     "@types/jest": "^26.0.15",
     "@types/react": "^16.9.53",
     "@types/react-native": "^0.63.30",
+    "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-test-renderer": "^16.9.3",
     "babel-jest": "^26.6.0",
     "eslint": "^7.11.0",
