--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     "jest.config.js",
     "react-native.config.js"
   ],
-  "include": ["./index.ts"]
+  "include": ["./index.ts", "./declarations.d.ts"]
 }
