--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.9",
+    "@react-navigation/stack": "^5.12.8",
     "@shopify/restyle": "^1.3.1",
     "react": "17.0.1",
     "react-native": "0.63.3",
