--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest",
     "lint": "eslint ."
   },
+  "proxy": "https://localhost:5000/",
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.9",
-    "@react-navigation/stack": "^5.12.8",
+    "@react-navigation/stack": "^5.14.2",
     "@shopify/restyle": "^1.3.1",
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.63.3",
     "react-native-bootsplash": "^2.2.8",
